💄Move isMd and isLandscape responsive logic to Tailwind and fix FocusMap layout gap

--- a/src/components/InfoPanel/Filter/Filter.module.css
+++ b/src/components/InfoPanel/Filter/Filter.module.css
@@ -1,7 +1,7 @@
 /* @/components/InfoPanel/Filter/Filter.module.css */
 
 .select {
-  padding: 0.5rem 1rem;
+  padding: 0.2rem 1rem;
   font-size: 0.8rem;
 
   background-color: var(--select-bg);
